[package]
name = "htmlvidiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = { version = "0.26.0", optional = true }
html5tokenizer = "0.5.2"
itertools = "0.12.0"
markup5ever_rcdom = { version = "0.2.0", optional = true }
once_cell = "1.18.0"
regex = "1.10.2"
similar = "2.3.0"

[features]
sanitization = ["dep:html5ever", "dep:markup5ever_rcdom"]
